--- a/Client_App/Views/CompareReportsTitleForm.axaml
+++ b/Client_App/Views/CompareReportsTitleForm.axaml
@@ -4,12 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:tools="clr-namespace:Client_App.Tools"
-    xmlns:type="clr-namespace:Client_App.Tools.ConverterType"
     xmlns:vm="clr-namespace:Client_App.ViewModels"
+    xmlns:resources="clr-namespace:Client_App.Resources"
+    xmlns:converterType="clr-namespace:Client_App.Resources.ConverterType"
     Title="{Binding Title, Mode=OneTime}"
-    Width="{Binding Source={x:Type type:Width}, Converter={tools:RatioConverter}, ConverterParameter='0.5', FallbackValue='600', Mode=OneTime}"
-    Height="{Binding Source={x:Type type:Height}, Converter={tools:RatioConverter}, ConverterParameter='0.75', FallbackValue='800', Mode=OneTime}"
+    Width="{Binding Source={x:Type converterType:Width}, Converter={StaticResource RatioConverter}, ConverterParameter='0.5', FallbackValue='600', Mode=OneTime}"
+    Height="{Binding Source={x:Type converterType:Height}, Converter={StaticResource RatioConverter}, ConverterParameter='0.75', FallbackValue='800', Mode=OneTime}"
     MinWidth="950"
     MinHeight="600"
     x:CompileBindings="True"
