--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:Client_App"
              xmlns:resources="clr-namespace:Client_App.Resources"
+             xmlns:avalonia="clr-namespace:HyperText.Avalonia;assembly=HyperText.Avalonia"
              x:Class="Client_App.App">
 
     <Application.DataTemplates>
