--- a/Client_App/Views/Calculator/ActivityCalculator.axaml
+++ b/Client_App/Views/Calculator/ActivityCalculator.axaml
@@ -47,8 +47,8 @@
                     CanUserReorderColumns="False"
                     Margin="5"
                     SelectionMode="Single"
-                    Items="{Binding Path=Radionuclids}"
-                    SelectedItem="{Binding Path=SelectedNuclid, Mode=TwoWay}">
+                    Items="{Binding Path=RadionuclidDictionary}"
+                    SelectedItem="{Binding Path=SelectedDictionaryNuclid, Mode=TwoWay}">
                     <DataGrid.Columns>
                         <DataGridTextColumn
                             x:DataType="m:CalculatorRadionuclidDTO"
@@ -96,7 +96,7 @@
                     HorizontalContentAlignment="Left"
                     Margin="5"
                     VerticalAlignment="Center"
-                    Text="{Binding SelectedNuclid.Abbreviation}">
+                    Text="{Binding SelectedDictionaryNuclid.Abbreviation}">
                 </TextBox>
                 <TextBlock
                     Grid.Column="0"
@@ -115,7 +115,7 @@
                     HorizontalContentAlignment="Left"
                     Margin="5"
                     VerticalAlignment="Center"
-                    Text="{Binding SelectedNuclid.Name}"/>
+                    Text="{Binding SelectedDictionaryNuclid.Name}"/>
                 <TextBlock
                     Grid.Column="0"
                     Grid.Row="2"
@@ -132,14 +132,14 @@
                     HorizontalContentAlignment="Left"
                     Margin="5"
                     VerticalAlignment="Center"
-                    Text="{Binding SelectedNuclid.Halflife}"/>
+                    Text="{Binding SelectedDictionaryNuclid.Halflife}"/>
                 <TextBlock
                     Grid.Column="2"
                     Grid.Row="2"
                     Margin="5"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Text="{Binding SelectedNuclid.Unit}"/>
+                    Text="{Binding SelectedDictionaryNuclid.Unit}"/>
             </Grid>
         </HeaderedContentControl>
         <HeaderedContentControl 
