--- a/Client_App/Views/Calculator/CategoryCalculator.axaml
+++ b/Client_App/Views/Calculator/CategoryCalculator.axaml
@@ -11,7 +11,7 @@
         Icon="/Assets/Radiation_sign.ico"
         Width="{Binding Source={x:Type converterType:Width}, Converter={StaticResource RatioConverter}, ConverterParameter='0.4', FallbackValue='600', Mode=OneWay}"
         Height="{Binding Source={x:Type converterType:Height}, Converter={StaticResource RatioConverter}, ConverterParameter='0.5', FallbackValue='800', Mode=OneWay}"
-        MinHeight="550"
+        MinHeight="600"
         MinWidth="650"
         WindowStartupLocation="CenterScreen"
         Title="Расчёт категории">
@@ -22,7 +22,7 @@
 
     <Grid
         ColumnDefinitions="0.4*,0.6*"
-        RowDefinitions="0.1*,0.25*,0.65*">
+        RowDefinitions="0.1*,0.27*,0.63*">
         <HeaderedContentControl
             Grid.Column="0"
             Grid.Row="0"
@@ -68,7 +68,7 @@
             Grid.RowSpan="2"
             Margin="5"
             Header="Выбранный радионуклид">
-            <Grid RowDefinitions="Auto,Auto,Auto">
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.25*" MinWidth="125"/>
                     <ColumnDefinition Width="0.65*" MinWidth="125"/>
@@ -136,6 +136,42 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     Text="{Binding SelectedNuclid.Unit}"/>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="3"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="D-величина (ТБк):"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="3"
+                    IsHitTestVisible="False"
+                    IsReadOnly="True"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedNuclid.D}"/>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="4"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="МЗА (Бк):"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="4"
+                    IsHitTestVisible="False"
+                    IsReadOnly="True"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedNuclid.Mza}"/>
             </Grid>
         </HeaderedContentControl>
         <HeaderedContentControl
@@ -236,7 +272,7 @@
                     Grid.ColumnSpan="3" 
                     Grid.Row="4" 
                     ColumnDefinitions="*,*" 
-                    RowDefinitions="*,*,*">
+                    RowDefinitions="*,*,*,*">
                     <TextBlock
                         Grid.Column="0"
                         Grid.Row="0"
@@ -285,6 +321,15 @@
                         Margin="5"
                         Text="{Binding Category}"
                         VerticalAlignment="Center"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="3"
+                        Foreground="Red"
+                        HorizontalAlignment="Center"
+                        Margin="5"
+                        VerticalAlignment="Center"
+                        Text="{Binding CategoryText}"/>
                 </Grid>
             </Grid>
         </HeaderedContentControl>
