--- a/Client_App/Views/GetSnkParams.axaml
+++ b/Client_App/Views/GetSnkParams.axaml
@@ -5,12 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Client_App.ViewModels"
-    xmlns:maskedTextBox="clr-namespace:Client_App.Controls.MaskedTextBox"
     Width="410"
-    Height="500"
+    Height="450"
     MinWidth="410"
-    MinHeight="500"
-    Title="Выбор параметров проверки СНК"
+    MinHeight="420"
+    Title="{Binding CommandName}"
     WindowStartupLocation="CenterScreen"
     x:CompileBindings="True"
     x:DataType="vm:GetSnkParamsVM"
@@ -38,15 +37,15 @@
                 <TextBlock 
                     HorizontalAlignment="Left"
                     Margin="5"
-                    Text="Введите дату, на которую необходимо составить СНК.&#x0a;Если оставить поле незаполненным, выгрузка будет составлена на текущую дату."
-                    TextWrapping="Wrap"
-                    Width="350"/>
-                <maskedTextBox:MaskedTextBoxForDate
+                    Text="Введите дату, на которую будет составлена выгрузка."
+                    TextWrapping="Wrap"/>
+                <CalendarDatePicker
+                    Margin="5, 10"
                     HorizontalAlignment="Left"
-                    Mask="99/99/9999"
-                    Margin="5, 5, 5, 20"
-                    Width="100"
-                    Text="{Binding Date, Mode=TwoWay}"/>
+                    VerticalAlignment="Center"
+                    Watermark="дд.мм.гг"
+                    Width="200"
+                    SelectedDate="{Binding Date, Mode=TwoWay}"/>
             </StackPanel>
         </Border>
         <Border
@@ -59,89 +58,112 @@
             BorderThickness="1"
             CornerRadius="5">
             <StackPanel>
-                <TextBlock HorizontalAlignment="Left"
-                           Margin="5, 5 , 5, 25"
-                           Text="Выберите графы, по которым необходимо искать учётную единицу:"
-                           Width="400"/>
-                <Grid ColumnDefinitions="150,75"
+                <TextBlock 
+                    HorizontalAlignment="Left"
+                    Margin="5, 5 , 5, 25"
+                    Text="Выберите графы, по которым необходимо искать учётную единицу:"
+                    Width="400"/>
+                <Grid ColumnDefinitions="100,Auto"
+                      RowDefinitions="30,30,30,30,30,30"
                       VerticalAlignment="Center">
-                    <StackPanel
+                    <TextBlock
                         Grid.Column="0"
-                        Margin="0, 5, 0, 0">
-                        <TextBlock
-                            Height="32"
-                            Margin="5, 0, 5, 8"
-                            Text="Выбрать все"/>
-                        <TextBlock
-                            Height="32"
-                            Margin="5, 8"
-                            Text="Номер паспорта"/>
-                        <TextBlock
-                            Height="32"
-                            Margin="5, 8"
-                            Text="Тип"/>
-                        <TextBlock
-                            Height="32"
-                            Margin="5, 8"
-                            Text="Радионуклиды"/>
-                        <TextBlock
-                            Height="32"
-                            Margin="5, 8"
-                            Text="Заводской номер"/>
-                        <TextBlock
-                            Height="32"
-                            Margin="5, 8"
-                            Text="Номер упаковки"/>
-                    </StackPanel>
-                    <StackPanel
+                        Grid.Row="0"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Выбрать все:"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Номер паспорта:"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="2"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Тип:"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="3"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Радионуклиды:"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="4"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Заводской номер:"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="5"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Номер упаковки:"/>
+                    <CheckBox
                         Grid.Column="1"
-                        HorizontalAlignment="Center"
-                        Margin="5, 0">
-                        <CheckBox
-                            Name="All"
-                            Margin="5, 8, 5, 15"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            IsThreeState="True"
-                            Checked ="AllCheckBox_Checked"
-                            Unchecked="AllCheckBox_Unchecked"
-                            IsChecked="{Binding CheckAll, Mode=TwoWay}"/>
-                        <CheckBox
-                            Click="AnyCheckBox_Clicked"
-                            Name="PasNum"
-                            Margin="5, 15"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            IsChecked="{Binding CheckPasNum, Mode=TwoWay}"/>
-                        <CheckBox
-                            Click="AnyCheckBox_Clicked"
-                            Name="Type"
-                            Margin="5, 15"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            IsChecked="{Binding CheckType, Mode=TwoWay}"/>
-                        <CheckBox
-                            Click="AnyCheckBox_Clicked"
-                            Name="Radionuclids"
-                            Margin="5, 15"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            IsChecked="{Binding CheckRadionuclids, Mode=TwoWay}"/>
-                        <CheckBox
-                            Click="AnyCheckBox_Clicked"
-                            Name="FacNum"
-                            Margin="5, 15"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            IsChecked="{Binding CheckFacNum, Mode=TwoWay}"/>
-                        <CheckBox
-                            Click="AnyCheckBox_Clicked"
-                            Name="PackNumber"
-                            Margin="5, 15"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            IsChecked="{Binding CheckPackNumber, Mode=TwoWay}"/>
-                    </StackPanel>
+                        Grid.Row="0"
+                        Name="All"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsThreeState="True"
+                        Checked ="AllCheckBox_Checked"
+                        Unchecked="AllCheckBox_Unchecked"
+                        IsChecked="{Binding CheckAll, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="1"
+                        Grid.Row="1"
+                        Click="AnyCheckBox_Clicked"
+                        Name="PasNum"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckPasNum, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="1"
+                        Grid.Row="2"
+                        Click="AnyCheckBox_Clicked"
+                        Name="Type"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckType, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="1"
+                        Grid.Row="3"
+                        Click="AnyCheckBox_Clicked"
+                        Name="Radionuclids"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckRadionuclids, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="1"
+                        Grid.Row="4"
+                        Click="AnyCheckBox_Clicked"
+                        Name="FacNum"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckFacNum, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="1"
+                        Grid.Row="5"
+                        Click="AnyCheckBox_Clicked"
+                        Name="PackNumber"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckPackNumber, Mode=TwoWay}"/>
                 </Grid>
             </StackPanel>
         </Border>
