--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -282,11 +282,10 @@
                             Command="{Binding  ExcelExportCheckInventories}"
                             CommandParameter="1.1"
                             Header="Форма 1.1"/>
-                        <!--
-                        <MenuItem Command="{Binding  ExcelExportCheckInventories}"
-                                  CommandParameter="1.3"
-                                  Header="Форма 1.3"/>
-                                  -->
+                        <!--<MenuItem 
+                            Command="{Binding  ExcelExportCheckInventories}"
+                            CommandParameter="1.3"
+                            Header="Форма 1.3"/> -->
                     </MenuItem>
                 </MenuItem>
                 <Separator/>
@@ -351,6 +350,10 @@
                 <MenuItem
                     Click="OpenContactsButtonClicked"
                     Header="Контакты"/>
+                <MenuItem
+                    Command="{Binding OpenFile}"
+                    CommandParameter="changelog"
+                    Header="Список изменений"/>
                     
             </MenuItem> 
 
