--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -282,10 +282,10 @@
                             Command="{Binding  ExcelExportCheckInventories}"
                             CommandParameter="1.1"
                             Header="Форма 1.1"/>
-                        <!--<MenuItem 
+                        <MenuItem 
                             Command="{Binding  ExcelExportCheckInventories}"
                             CommandParameter="1.3"
-                            Header="Форма 1.3"/>-->
+                            Header="Форма 1.3"/>
                     </MenuItem>
                 </MenuItem>
                 <Separator/>
