--- a/Client_App/Views/Messages/GetRegionAndFormNums.axaml
+++ b/Client_App/Views/Messages/GetRegionAndFormNums.axaml
@@ -1,27 +1,27 @@
-<Window
+<Window 
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Client_App.ViewModels.Messages"
-    Width="410"
-    Height="450"
-    MinWidth="410"
-    MinHeight="420"
-    Title="{Binding CommandName}"
+    Width="430"
+    Height="350"
+    MinWidth="430"
+    MinHeight="350"
+    Title="Запрос региона и номеров форм"
     WindowStartupLocation="CenterScreen"
-    x:Class="Client_App.Views.Messages.GetSnkParams"
-    x:CompileBindings="True"
-    x:DataType="vm:GetSnkParamsVM"
+    x:Class="Client_App.Views.Messages.GetRegionAndFormNums"
+    x:DataType="vm:GetRegionAndFormNumsVM"
     mc:Ignorable="d">
 
     <Design.DataContext>
-        <vm:GetSnkParamsVM/>
+        <vm:GetRegionAndFormNumsVM/>
     </Design.DataContext>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*" MinHeight="110" MaxHeight="200"/>
-            <RowDefinition Height="3.5*" MinHeight="220" MaxHeight="500"/>
+            <RowDefinition Height="1*" MinHeight="130" MaxHeight="200"/>
+            <RowDefinition Height="2*" MinHeight="150" MaxHeight="400"/>
             <RowDefinition Height="0.5*" MinHeight="50" MaxHeight="75"/>
         </Grid.RowDefinitions>
         <Border
@@ -33,19 +33,17 @@
             BorderBrush="Black"
             BorderThickness="1"
             CornerRadius="5">
-            <StackPanel>
-                <TextBlock 
+            <StackPanel Orientation="Vertical">
+                <TextBlock
                     HorizontalAlignment="Left"
-                    Margin="5"
-                    Text="Введите дату, на которую будет составлена выгрузка."
+                    Margin="5, 5 , 5, 10"
+                    Text="Укажите номер региона из двух цифр. Если поле будет не заполнено или заполнено некорректно, проверка наличия инвентаризации будет выполнена для всех организаций без ограничения по региону."
+                    Width="400"
                     TextWrapping="Wrap"/>
-                <CalendarDatePicker
+                <TextBox
                     Margin="5, 10"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    Watermark="дд.мм.гг"
                     Width="200"
-                    SelectedDate="{Binding Date, Mode=TwoWay}"/>
+                    Text="{Binding Region}"/>
             </StackPanel>
         </Border>
         <Border
@@ -58,14 +56,16 @@
             BorderThickness="1"
             CornerRadius="5">
             <StackPanel>
-                <TextBlock 
+                <TextBlock
                     HorizontalAlignment="Left"
                     Margin="5, 5 , 5, 25"
-                    Text="Выберите графы, по которым необходимо искать учётную единицу:"
-                    Width="400"/>
-                <Grid ColumnDefinitions="100,Auto"
-                      RowDefinitions="30,30,30,30,30,30"
-                      VerticalAlignment="Center">
+                    Text="Выберите номера форм, по которым необходимо выполнить проверку:"
+                    Width="400"
+                    TextWrapping="Wrap"/>
+                <Grid
+                    ColumnDefinitions="100,Auto"
+                    RowDefinitions="30,30,30,30,30,30"
+                    VerticalAlignment="Center">
                     <TextBlock
                         Grid.Column="0"
                         Grid.Row="0"
@@ -79,35 +79,14 @@
                         HorizontalAlignment="Right"
                         Margin="5, 0"
                         VerticalAlignment="Center"
-                        Text="Номер паспорта:"/>
+                        Text="Форма 1.1:"/>
                     <TextBlock
                         Grid.Column="0"
                         Grid.Row="2"
                         HorizontalAlignment="Right"
                         Margin="5, 0"
                         VerticalAlignment="Center"
-                        Text="Тип:"/>
-                    <TextBlock
-                        Grid.Column="0"
-                        Grid.Row="3"
-                        HorizontalAlignment="Right"
-                        Margin="5, 0"
-                        VerticalAlignment="Center"
-                        Text="Радионуклиды:"/>
-                    <TextBlock
-                        Grid.Column="0"
-                        Grid.Row="4"
-                        HorizontalAlignment="Right"
-                        Margin="5, 0"
-                        VerticalAlignment="Center"
-                        Text="Заводской номер:"/>
-                    <TextBlock
-                        Grid.Column="0"
-                        Grid.Row="5"
-                        HorizontalAlignment="Right"
-                        Margin="5, 0"
-                        VerticalAlignment="Center"
-                        Text="Номер упаковки:"/>
+                        Text="Форма 1.3:"/>
                     <CheckBox
                         Grid.Column="1"
                         Grid.Row="0"
@@ -123,52 +102,25 @@
                         Grid.Column="1"
                         Grid.Row="1"
                         Click="AnyCheckBox_Clicked"
-                        Name="PasNum"
+                        Name="Form11"
                         Margin="15, 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        IsChecked="{Binding CheckPasNum, Mode=TwoWay}"/>
+                        IsChecked="{Binding CheckForm11, Mode=TwoWay}"/>
                     <CheckBox
                         Grid.Column="1"
                         Grid.Row="2"
                         Click="AnyCheckBox_Clicked"
-                        Name="Type"
+                        Name="Form13"
                         Margin="15, 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        IsChecked="{Binding CheckType, Mode=TwoWay}"/>
-                    <CheckBox
-                        Grid.Column="1"
-                        Grid.Row="3"
-                        Click="AnyCheckBox_Clicked"
-                        Name="Radionuclids"
-                        Margin="15, 0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        IsChecked="{Binding CheckRadionuclids, Mode=TwoWay}"/>
-                    <CheckBox
-                        Grid.Column="1"
-                        Grid.Row="4"
-                        Click="AnyCheckBox_Clicked"
-                        Name="FacNum"
-                        Margin="15, 0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        IsChecked="{Binding CheckFacNum, Mode=TwoWay}"/>
-                    <CheckBox
-                        Grid.Column="1"
-                        Grid.Row="5"
-                        Click="AnyCheckBox_Clicked"
-                        Name="PackNumber"
-                        Margin="15, 0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        IsChecked="{Binding CheckPackNumber, Mode=TwoWay}"/>
+                        IsChecked="{Binding CheckForm13, Mode=TwoWay}"/>
                 </Grid>
             </StackPanel>
         </Border>
-        <WrapPanel 
-            Grid.Row="2" 
+        <WrapPanel
+            Grid.Row="2"
             HorizontalAlignment="Center"
             Margin="0,5"
             MaxHeight="50">
