--- a/Client_App/Views/Calculator/CategoryCalculator.axaml
+++ b/Client_App/Views/Calculator/CategoryCalculator.axaml
@@ -11,7 +11,7 @@
         Icon="/Assets/Radiation_sign.ico"
         Width="{Binding Source={x:Type converterType:Width}, Converter={StaticResource RatioConverter}, ConverterParameter='0.4', FallbackValue='600', Mode=OneWay}"
         Height="{Binding Source={x:Type converterType:Height}, Converter={StaticResource RatioConverter}, ConverterParameter='0.5', FallbackValue='800', Mode=OneWay}"
-        MinHeight="600"
+        MinHeight="650"
         MinWidth="650"
         WindowStartupLocation="CenterScreen"
         Title="Расчёт категории">
@@ -183,8 +183,8 @@
                 ColumnDefinitions="0.1*,0.45*,0.45*"
                 RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                 <TextBlock 
-                    Grid.Column="1" 
-                    Grid.ColumnSpan="2" 
+                    Grid.Column="0" 
+                    Grid.ColumnSpan="3" 
                     Grid.Row="0"
                     FontSize="12"
                     HorizontalAlignment="Center"
@@ -255,16 +255,21 @@
                     <DataGrid.Columns>
                         <DataGridTextColumn
                             x:DataType="m:CalculatorRadionuclidDTO"
-                            Width="0.6*"
+                            Width="0.4*"
                             Header="Радионуклид"
                             IsReadOnly="True"
                             Binding="{Binding Path=Name}"/>
                         <DataGridTextColumn
                             x:DataType="m:CalculatorRadionuclidDTO"
-                            Width="0.4*"
+                            Width="0.3*"
                             Header="Обозначение"
                             IsReadOnly="True"
                             Binding="{Binding Path=Abbreviation}"/>
+                        <DataGridTextColumn
+                            x:DataType="m:CalculatorRadionuclidDTO"
+                            Width="0.3*"
+                            Header="Активность, Бк"
+                            Binding="{Binding Path=Activity, Mode=TwoWay}"/>
                     </DataGrid.Columns>
                 </DataGrid>
                 <Grid 
@@ -272,21 +277,21 @@
                     Grid.ColumnSpan="3" 
                     Grid.Row="4" 
                     ColumnDefinitions="*,*" 
-                    RowDefinitions="*,*,*,*">
+                    RowDefinitions="*,*,*,*,*">
                     <TextBlock
                         Grid.Column="0"
                         Grid.Row="0"
                         Margin="5"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Text="Активность"/>
+                        Text="Количество"/>
                     <TextBox
                         Grid.Column="1"
                         Grid.Row="0"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Left"
                         Margin="5"
-                        Text="{Binding Activity}"
+                        Text="{Binding Quantity}"
                         VerticalAlignment="Center"/>
                     <TextBlock
                         Grid.Column="0"
@@ -294,14 +299,15 @@
                         Margin="5"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Text="Количество"/>
+                        Text="Отношение A/D"/>
                     <TextBox
                         Grid.Column="1"
                         Grid.Row="1"
+                        IsReadOnly="True"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Left"
                         Margin="5"
-                        Text="{Binding Quantity}"
+                        Text="{Binding ActivityToNormalizingD}"
                         VerticalAlignment="Center"/>
                     <TextBlock
                         Grid.Column="0"
@@ -330,6 +336,18 @@
                         Margin="5"
                         VerticalAlignment="Center"
                         Text="{Binding CategoryText}"/>
+                    <Button
+                        Grid.Column="0"
+                        Grid.Row="4"
+                        Click="OnCalculateButtonClicked"
+                        Content="Рассчитать"
+                        Margin="0,5,5,0"/>
+                    <Button
+                        Grid.Column="1"
+                        Grid.Row="4"
+                        Click="OnCloseButtonClicked"
+                        Content="Закрыть"
+                        Margin="5,5,0,0"/>
                 </Grid>
             </Grid>
         </HeaderedContentControl>
